--- a/Elevator 3D 0.0.1.html
+++ b/Elevator 3D 0.0.1.html
@@ -36,6 +36,7 @@
   <script src="Elevator 3D 0.0.1.js"></script>
 
   <link rel="stylesheet" type="text/css" href="Elevator 3D 0.0.1.css">
+<script src="cordova.js"></script>
 </head>
 
 <body>
